Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,12 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Note: this cell won't return a valid response unless you specify your api key\n",
-    "api_key = #put your api key (as a string) here\n",
+    "api_key = \"MZZqWmVc6ZJAuPd7FKHcwnxgjGxaQyQMMVcN5af3PZetVhoGrmTWQWwEIrRVuegzuC2EL7T8CJvDQCqJ8Ga1CZkaM7jisfvp3r8ME_BdyvzvTu6mXfjO-vhUWjASXXYx\"#put your api key (as a string) here\n",
+    "\n",
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "\n",
