Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
     "                'price' : \"1,2,3,4\",\n",
     "                'open_now' : True\n",
     "            }\n",
-    "response = requests.get(url, headers=headers, params=url_params)"
+    "response = requests.get(url, headers=headers, params=url_params)\n",
+    "re"
    ]
   },
   {
