--- a/index.ipynb
+++ b/index.ipynb
@@ -140,11 +140,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "response."
+   ]
   },
   {
    "cell_type": "markdown",
